--- a/OrderService/src/main/resources/static/index.html
+++ b/OrderService/src/main/resources/static/index.html
@@ -1,9 +1,64 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Order Service</title>
+    <title>DevXcelerate</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 40px;
+            background-color: #f9f9f9;
+        }
+        h1 {
+            text-align: center;
+            color: #FE0175;
+            font-size: 36px;
+        }
+        h2 {
+            text-align: center;
+            color: #555;
+            font-size: 18px;
+            margin-top: -10px;
+            margin-bottom: 40px;
+        }
+        h3 {
+            color: #FE0175;
+        }
+        p {
+            line-height: 1.6;
+        }
+        ul {
+            padding-left: 20px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to Order Service Home Page!</h1>
+    <h1>DevXcelerate</h1>
+    <h2>"Connecting Code, Streamlining Delivery"</h2>
+
+    <h3>What is DevXcelerate?</h3>
+    <p>
+        Leverage the power of GenAI to build, manage, and optimize your DevOps workflows faster and more effectively than ever before.
+        This innovative platform streamlines your development lifecycle with intelligent automation. It effortlessly creates and transforms
+        CI/CD pipelines by automatically scanning your codebase to generate tailored pipeline code (like Azure YAML or Jenkinsfile).
+        Furthermore, it enables seamless conversion between different CI/CD tool formats, ensuring flexibility. By drastically reducing manual effort,
+        the platform accelerates pipeline development and boosts overall team productivity.
+    </p>
+
+    <h3>The Problem:</h3>
+    <p>
+        Organizations face significant challenges in modern DevOps pipeline management, primarily due to the manual complexity and inefficiency of configuring
+        CI/CD pipelines, which consumes valuable developer time and requires specialized expertise. This is compounded by tooling fragmentation across various platforms
+        like Azure DevOps, Jenkins, GitLab CI, and GitHub Actions, each demanding specific syntax, making consistent processes and migration difficult.
+        Furthermore, existing tools lack the intelligence to automatically generate or adapt pipeline configurations based on project specifics or facilitate conversion between formats,
+        leading to bottlenecks that hinder agility, slow down releases, and increase the risk of configuration errors, ultimately preventing teams from fully leveraging the benefits of DevOps.
+    </p>
+
+    <h3>The Solution:</h3>
+    <ul>
+        <li><strong>AI-powered automation reduces manual pipeline coding effort:</strong> Frees up valuable developer time by eliminating tedious configuration tasks.</li>
+        <li><strong>Accelerates software delivery by streamlining CI/CD processes:</strong> Optimizes the entire CI/CD flow, leading to faster builds and deployments.</li>
+        <li><strong>Ensures consistency and standardizes pipeline configurations across tools:</strong> Reduces syntax-related errors and simplifies cross-platform maintenance.</li>
+        <li><strong>Optimizes DevOps efficiency:</strong> Saves developer time, minimizes errors, and boosts productivity through automation and standardization.</li>
+    </ul>
 </body>
 </html>
